istio-tutorials/step3/3.2-virtual-services/virtual-service-personal.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  hosts:
    - reviews.default.svc.cluster.local
  http:
    - match:
        - headers:
            end-user:
              exact: yuya-test
      route:
        - destination:
            host: reviews
            subset: v3
    - route:
        - destination:
            host: reviews
            subset: v1
